# lamp

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  justfile  shell.nix
i18n/en/: lamp.ftl
res/: dev.lamp.app.desktop  dev.lamp.app.metainfo.xml
src/: application.rs  config.rs  lib.rs  localize.rs  main.rs  message.rs
src/components/: context_tag.rs  habit_chart.rs  mod.rs  month_calendar.rs  task_row.rs
src/core/: account.rs  day_plan.rs  event.rs  habit.rs  link.rs  list_item.rs  mod.rs  note.rs  project.rs  recurrence.rs  task.rs  temporal.rs
src/org/: convert.rs  mod.rs  parser.rs  writer.rs
src/pages/: accounts.rs  all_tasks.rs  conflicts.rs  contacts.rs  daily_planning.rs  do_mode.rs  habits.rs  inbox.rs  list.rs  mod.rs  next_actions.rs  notes.rs  projects.rs  review.rs  settings.rs  someday.rs  temporal.rs  waiting.rs
src/sync/: anthropic.rs  caldav.rs  carddav.rs  ical.rs  imap.rs  keyring.rs  merge.rs  mod.rs  vevent.rs  vtodo.rs  webdav.rs
