[package]
name = "lamp"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "A COSMIC GTD task manager backed by org-mode files"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
env_logger = "0.11"
log = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["about", "dbus-config", "tokio", "winit", "wgpu", "wayland"]

[features]
default = ["wayland", "wgpu"]
wgpu = ["libcosmic/wgpu"]
wayland = ["libcosmic/wayland"]

[profile.release]
lto = true
codegen-units = 1
strip = true
