[package]
name = "lamp"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"
description = "A COSMIC GTD task manager backed by org-mode files"

[lib]
name = "lamp"
path = "src/lib.rs"

[[bin]]
name = "lamp"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
systemd-journal-logger = "2"
log = "0.4"
once_cell = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "charset", "http2", "macos-system-configuration"] }
roxmltree = "0.20"
async-imap = "0.10"
async-native-tls = "0.5"
async-std = { version = "1", features = ["attributes"] }
futures = "0.3"
mail-parser = "0.9"
oo7 = "0.4"
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = "8"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = ["about", "dbus-config", "tokio", "winit", "wgpu", "wayland"]

[features]
default = ["wayland", "wgpu"]
wgpu = ["libcosmic/wgpu"]
wayland = ["libcosmic/wayland"]

[profile.release]
lto = true
codegen-units = 1
strip = true
